added -Ls, to skip file exists tests, only for non w mode

--- a/acxi.1
+++ b/acxi.1
@@ -1139,7 +1139,9 @@ mostly the same tags, with only a few differing.
 * \fBf\fR \- Generate full per audio file taglist data. This is all the tags 
 found per audio file in the order the files occur. This is the default action.
 
-* \fBi\fR \- Generate info file data. Disables taglist unless c/t used.
+* \fBi\fR \- Generate info file data. Disables taglist unless c/f used.
+
+* \fBs\fR \- Skip the file exists tests. Can't be used with w.
 
 * \fBw\fR \- Write changes to file(s). Only writes if info.txt and/or 
 taglist.tag files are not in directory.
