more adjustments to tag features

--- a/acxi.1
+++ b/acxi.1
@@ -914,7 +914,6 @@ field names can use a space, \fB\-\fR, \fB_\fR or no space as word separators):
 \fBETREE\fR \- Etree, Etree DB. Non\-standard. See below.
 \fBGENRE\fR \- Genre.
 \fBIMAGE\fR \- Cover, Image.
-\fBISRC\fR \- ISRC, ISRC ID.
 \fBLOCATION\fR \- City, State, Country, Lieu, Location, Ville.
 \fBMIXER\fR \- Mixer, Mixed by, Masterer, Mastered by.
 \fBOPUS\fR \- Opus.
@@ -1016,8 +1015,8 @@ syntax like \-\-\-\-\-\- is a very common part of info file track values.
 
 Also used with \fB\-Xn\fR and \fB\-Xt\fR.
 
-* Cover:/Image:, Genre:, Producer:/Taper:, CDDB, Etree, ISRC, do not need to be 
-in top block.
+* Cover:/Image:, Genre:, Producer:/Taper:, CDDB, Etree, do not need to be in top 
+block.
 
 Should always be run in the flac folder with \fB\-s./\fR or unexpected results 
 could occur.
