--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2023\-01\-11" acxi "acxi manual"
+.TH ACXI 1 "2023\-01\-15" acxi "acxi manual"
 .SH NAME
 acxi \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -1130,7 +1130,9 @@ per FLAC directory, add \fBw\fR.
 * \fBa\fR \- Switch output to tag key/value \fB%:\fR separator from \fB=\fR, and 
 change output file from \fBtaglist.tag\fR to \fBauto.tag\fR. If \fBc\fR and 
 \fBf\fR not used, defaults to \fBc\fR. This allows you to use the resulting file 
-as a source for \fB\-\-autotag\fR.
+as a source for \fB\-\-autotag\fR. This also sets the \fBUNIQUE%:\fR value, 
+\fBTAGBLOCK\fR for \fB\-Laf\fR, and a list of general tags that are not global 
+to all tags for \fB\-Lac\fR.
 
 * \fBc\fR \- Generate condensed taglist data. Useful if each file has 
 mostly the same tags, with only a few differing.
@@ -1140,7 +1142,7 @@ found per audio file in the order the files occur. This is the default action.
 
 * \fBi\fR \- Generate info file data. Disables taglist unless c/f used.
 
-* \fBs\fR \- Skip the file exists tests. Can't be used with w.
+* \fBs\fR \- Skip the file exists tests. Can't be used with w. 
 
 * \fBw\fR \- Write changes to file(s). Only writes if info.txt and/or 
 taglist.tag files are not in directory.
@@ -1182,12 +1184,15 @@ The comma separated list of tag names will be used to set those tags to be used
 only 1x per file when found in \fBauto.tag\fR file, and unset after. You can 
 also set this list manually in the auto.tag file top special field 
 \fBUNIQUE%\fR. This will make those tags work in a similar way to \fBVERSION\fR 
-or \fBPART\fR or \fBTITLE\fR.
+or \fBPART\fR or \fBTITLE\fR. \fBTAGBLOCK\fR value will treat each set of tags 
+before the \fBFILE%:\fR item as applying only to that block of tags.
 
 You want to set these tags in \fBauto.tag\fR right before the file data block 
 for that file. Note that this will override any global use of that tag name.
 
-Alternately, when used with \fB\-La\fR, \fB\-C\fR, \fB\-M\fR, \fB\-S\fR will 
+\fB\-La\fR/\fB\-Laf\fB will set unique automatically.
+
+Alternately, when used with \fB\-C\fR, \fB\-M\fR, or \fB\-S\fR will 
 automatically set the UNIQUE%: value in the generated \fBauto.tag\fR file.
 
 Sample: with command line:
